--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class=" col-md-5 bg1">
           <div class="box-for-intro">
             <div class="inner-left">
-              <a href="childTax/index.html" class="clickable-image">
+              <a href="https://www.whatsapp.com/channel/0029VaLORI08qIzsxBFj5l2B" class="clickable-image">
                 <img src="./images/WhatsApp_RAPID-PHONE.png" alt="Your Image Description">
             </a>
             <!-- <h1 class="display-2 ">
